--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "andrei-krasovskii-corner",
   "version": "0.1.0",
-  "private": true,
+  "author": "Andrei Krasovskii <an.krasowsckij@gmail.com>",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,14 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "20.2.5",
-    "@types/react": "18.2.7",
-    "@types/react-dom": "18.2.4",
-    "eslint": "8.41.0",
+    "eslint": "^8.41.0",
     "eslint-config-next": "13.4.4",
     "next": "13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@types/node": "20.2.5",
+    "@types/react": "18.2.7",
+    "@types/react-dom": "18.2.4",
+    "eslint-prettier-config": "^1.0.1",
+    "prettier": "^2.8.8"
   }
 }
