--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "next": "13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sass": "^1.62.1",
+    "scss": "^0.2.4",
     "typescript": "5.0.4"
   },
   "devDependencies": {
     "@types/node": "20.2.5",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
-    "eslint-prettier-config": "^1.0.1",
+    "eslint-config-prettier": "^8.8.0",
     "prettier": "^2.8.8"
   }
 }
